syntax = "proto3";

service Raft {
  rpc RequestVote (TeId) returns (Check);
  rpc AppendEntries(TeId) returns (Check);
  rpc GetLeader(Null) returns (Leader);
  rpc Suspend(Per) returns (Null);
}

message Null {}

message TeId {
  int64 term = 1;
  int64 id = 2;
}

message Per {
  int64 period = 1;
}

message Check {
  int64 term = 1;
  bool success = 2;
}

message Leader {
  optional int64 id = 1;
  optional string addr = 2;
}